--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP with edits by Hannah Ballowe</title>
+		<title>Story by HTML5 UP with edits by Hannah Ballowe </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Hannah Ballowe</h1>
-							<p class="major">I am currently a freshman at Virginia Tech (now online) and I am making this project for one of my classes, Writing and Digital Media. I like to read, run, and write. This website is a forum for displaying a few of the things I've written or made. </a></p>
+							<p class="major">I'm currently a freshman at Virginia Tech (now online) and I am making this project for one of my classes, Writing and Digital Media. I like to read, run, and write. This website is a forum for displaying a few of the things I've made.</a></p>
 							<ul class="actions stacked">
 							</ul>
 						</div>
@@ -35,10 +35,10 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>It's Been Almost 50 Years Since the Stanford Prison Experiment. Here's Why We Can't Forget It.</h2>
-							<p>This blog post discusses the Stanford Prison experiment and how the results are still applicable today, almost 50 years later.</p>
+							<p>This blog post discusses the Stanford Prison experiment and how it's results are still applicable today, almost 50 years later.</p>
 							<ul class="actions stacked">
 								<li><a href="https://medium.com/@hballowe/its-been-almost-50-years-since-the-
-stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="button">See the Post</a></li>
+stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="fas fa-glasses"> <ul>See the Post</ul></a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -52,7 +52,7 @@ stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="but
 							<h2>Becoming Bionic</h2>
 							<p>This post discusses Elon Musk's company, Neuralink, and the product they're creating: a compuer chip made for implantation in your brain. </p>
 							<ul class="actions stacked">
-								<li><a href="https://medium.com/@hballowe/becoming-bionic-dc33c6dc13e5" class="button">See the Post</a></li>
+								<li><a href="https://medium.com/@hballowe/becoming-bionic-dc33c6dc13e5" class="fas fa-glasses"> <ul>See the Post</ul></a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -66,7 +66,7 @@ stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="but
 							<h2>Top 3 Books to Read During Quarantine</h2>
 							<p>This podact offers some suggestions of books to read while we're passing the time inside and Social Distancing. With books spanning three different genres, this podcast offers ideas for people with many different tastes.</p>
 							<ul class="actions stacked">
-								<li><a href="https://soundcloud.com/user-232866899/top-three-books-to-read-during-quarantine/s-ZZ0WP804Wfv" class="button">Listen to the Podcast</a></li>
+								<li><a href="https://soundcloud.com/user-232866899/top-three-books-to-read-during-quarantine/s-ZZ0WP804Wfv" class="fas fa-podcast"><ul>Listen to the Podcast</ul></a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -76,16 +76,17 @@ stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="but
 
 						<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 							<div class="content">
-								<h2>Biking Tour of Richmond, VA with Stops you can Safely Make During Quarantine </h2>
-								<p>This video follows a bike tour route of some unique outdoor place in Richmond, VA. The focus of the video is to highlight some places that can still be enjoyed while Social Distancing, as well as to encourage getting outside during the quarantine. </p>
+								<h2>Biking Tour of Richmond with Stops you can Safely Make During Quarantine </h2>
+								<p>This video follows a bike tour route of some unique outdoor place in Richmond, VA. The focus of the video is to highlight some places that can still be enjoyed while Social Distancing, as well as to encourage getting outside during the quarantine. For some more information, check out a little bit about <a href="https://en.wikipedia.org/wiki/History_of_Richmond,_Virginia" >Richmond's history!</a></p>
 								<ul class="actions stacked">
-									<li><a href="https://youtu.be/Qr7faPe10s8" class="button">Watch the Video</a></li>
+									<li><a href="https://youtu.be/Qr7faPe10s8" class="fab fa-youtube"><ul>Watch the Video</ul></a></li>
 								</ul>
 							</div>
 							<div class="image">
 								<img src="images/Screen Shot 2020-04-23 at 4.18.49 PM.png" alt="" />
 							</div>
 						</section>
+
 
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
