why you no work

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="fas
 						<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 							<div class="content">
 								<h2>Biking Tour of Richmond with Stops you can Safely Make During Quarantine </h2>
-								<p>This video follows a bike tour route of some unique outdoor place in Richmond, VA. The focus of the video is to highlight some places that can still be enjoyed while Social Distancing, as well as to encourage getting outside during the quarantine. For some more information, check out a little bit about of information <a href="https://en.wikipedia.org/wiki/History_of_Richmond,_Virginia" >Richmond's history!</a></p>
+								<p>This video follows a bike tour route of some unique outdoor place in Richmond, VA. The focus of the video is to highlight some places that can still be enjoyed while Social Distancing, as well as to encourage getting outside during the quarantine. For some more information, check out a little on <a href="https://en.wikipedia.org/wiki/History_of_Richmond,_Virginia" >Richmond's history!</a></p>
 								<ul class="actions stacked">
 									<li><a href="https://youtu.be/Qr7faPe10s8" class="fab fa-youtube"><ul>Watch the Video</ul></a></li>
 								</ul>
