pls work so i dont cry

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<p>This blog post discusses the Stanford Prison experiment and how it's results are still applicable today, almost 50 years later.</p>
 							<ul class="actions stacked">
 								<li><a href="https://medium.com/@hballowe/its-been-almost-50-years-since-the-
-stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="fas fa-glasses"> <ul>See the Post</ul></a></li>
+stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="fas fa-glasses"> See the Post</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -52,7 +52,7 @@ stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="fas
 							<h2>Becoming Bionic</h2>
 							<p>This post discusses Elon Musk's company, Neuralink, and the product they're creating: a compuer chip made for implantation in your brain. </p>
 							<ul class="actions stacked">
-								<li><a href="https://medium.com/@hballowe/becoming-bionic-dc33c6dc13e5" class="fas fa-glasses"> <ul>See the Post</ul></a></li>
+								<li><a href="https://medium.com/@hballowe/becoming-bionic-dc33c6dc13e5" class="fas fa-glasses"> See the Post</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -66,7 +66,7 @@ stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="fas
 							<h2>Top 3 Books to Read During Quarantine</h2>
 							<p>This podact offers some suggestions of books to read while we're passing the time inside and Social Distancing. With books spanning three different genres, this podcast offers ideas for people with many different tastes.</p>
 							<ul class="actions stacked">
-								<li><a href="https://soundcloud.com/user-232866899/top-three-books-to-read-during-quarantine/s-ZZ0WP804Wfv" class="fas fa-podcast"><ul>Listen to the Podcast</ul></a></li>
+								<li><a href="https://soundcloud.com/user-232866899/top-three-books-to-read-during-quarantine/s-ZZ0WP804Wfv" class="fas fa-podcast">Listen to the Podcast</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -79,7 +79,7 @@ stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="fas
 								<h2>Biking Tour of Richmond with Stops you can Safely Make During Quarantine </h2>
 								<p>This video follows a bike tour route of some unique outdoor place in Richmond, VA. The focus of the video is to highlight some places that can still be enjoyed while Social Distancing, as well as to encourage getting outside during the quarantine. For some more information, check out a little on <a href="https://en.wikipedia.org/wiki/History_of_Richmond,_Virginia" >Richmond's history!</a></p>
 								<ul class="actions stacked">
-									<li><a href="https://youtu.be/Qr7faPe10s8" class="fab fa-youtube"><ul>Watch the Video</ul></a></li>
+									<li><a href="https://youtu.be/Qr7faPe10s8" class="fab fa-youtube">Watch the Video</a></li>
 								</ul>
 							</div>
 							<div class="image">
