i'm a person of my word so i will cry but please work so i dont have to

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="fas
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Top 3 Books to Read During Quarantine</h2>
-							<p>This podact offers some suggestions of books to read while we're passing the time inside and Social Distancing. With books spanning three different genres, this podcast offers ideas for people with many different tastes.</p>
+							<p>This podact offers some suggestions of books to read while we're passing the time inside and Social Distancing. With books spanning three different genres, this podcast offers ideas for people with different tastes.</p>
 							<ul class="actions stacked">
 								<li><a href="https://soundcloud.com/user-232866899/top-three-books-to-read-during-quarantine/s-ZZ0WP804Wfv" class="fas fa-podcast">Listen to the Podcast</a></li>
 							</ul>
