--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP with edits by Hannah Ballowe </title>
+		<title>Hannah Ballowe </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -86,6 +86,10 @@ stanford-prison-experiment-here-s-why-we-can-t-forget-it-58ebba91609" class="fas
 								<img src="images/Screen Shot 2020-04-23 at 4.18.49 PM.png" alt="" />
 							</div>
 						</section>
+						<div class ="clear"></div>
+						<footer id = "page-footer">
+							&copy; Hannah Ballowe. Template from <a href ="https://html5up.net/"> HTML 5Up. </a> 
+						</footer>
 
 
 			<script src="assets/js/jquery.min.js"></script>
